--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "ajv": "^5.2.3",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
+    "eslint-plugin-jest": "^21.22.0",
+    "jest": "^23.5.0",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8"
   },
