--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "publish-to-npm": "npm run build:readme && npm run dist && npm publish",
     "preversion": "npm run build:playground && npm run dist && npm run build:readme && npm run cs-check && npm run lint",
     "start": "node devServer.js",
-    "tdd": "cross-env NODE_ENV=test mocha --require babel-register --watch --require ./test/setup-jsdom.js test/**/*_test.js",
-    "test": "cross-env NODE_ENV=test mocha --require babel-register --require ./test/setup-jsdom.js test/**/*_test.js"
+    "tdd:mocha": "cross-env NODE_ENV=test mocha --require babel-register --watch --require ./test/setup-jsdom.js test/**/*_test.js",
+    "test:mocha": "cross-env NODE_ENV=test mocha --require babel-register --require ./test/setup-jsdom.js test/**/*_test.js",
+    "tdd": "jest --watch",
+    "test": "jest"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/tests/setup-test-env.js"
   },
   "prettierOptions": "--jsx-bracket-same-line --trailing-comma es5 --semi --tab-width 2",
   "lint-staged": {
@@ -66,6 +71,7 @@
     "codemirror": "^5.30.0",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
+    "dom-testing-library": "^3.4.0",
     "eslint": "^4.9.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-plugin-flowtype": "^2.39.1",
@@ -79,6 +85,7 @@
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
     "husky": "^0.13.2",
+    "jest-dom": "^1.12.0",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^3.3.1",
